GRAPH-1556 - Initial commit of gremlin-server SSL support within OLAP. Need to fix JWT's still.